# SEAP

./: LICENSE  README-cif2qewan.md  README.md  pyproject-cif2qewan.toml  pyproject.toml
config/: pp_psl_rrkj.csv
examples/neuralnet/entangled_bands/Si_sp/input/: cif2qewan.sh  cif2qewan.toml
examples/neuralnet/isolated_bands/FeSe_d/input/: cif2qewan.sh  mp-20311_FeSe_sym.cif
examples/neuralnet/isolated_bands/SrVO3_t2g/input/: cif2qewan.sh  cif2qewan.toml
models/encoder_1/: encoder.py
src/seap/: __init__.py
src/seap/common/: __init__.py  lattice.py  molecule.py  units.py  xsf.py
src/seap/core/: __init__.py  mod_win.py  postppx.py  predict.py  proj.py  select_bands.py
src/seap/interface/: __init__.py  qe.py
src/seap/prediction/: __init__.py  datasets.py  grids.py  integration.py  lasso.py  sph_harm.py  utils.py  wavefunction.py
src/seap/tools/: __init__.py  compare.py  wan_comp_band.py
tests/: README.md  test_compare.py  test_datasets.py  test_grids.py  test_imports.py  test_integration.py  test_lasso.py  test_lattice.py  test_mod_win.py  test_molecule.py  test_postppx.py  test_predict.py  test_prediction_utils.py  test_proj.py  test_proj_main.py  test_qe.py  test_select_bands.py  test_sph_harm.py  test_tools_init.py  test_units.py  test_utils_file_io.py  test_wan_comp_band.py  test_wavefunction.py  test_xsf.py
