[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seap"
version = "0.1.0"
description = "Semiautomated Estimator for Atomic Projections of Wannier functions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["wannier90", "quantum-espresso", "hubbard", "molecular-systems", "band-structure", "hydrogenic", "projection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "ase>=3.22.0",
    "pymatgen>=2022.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
seap-select-bands = "seap.core.select_bands:main"
seap-postppx = "seap.core.postppx:main"
seap-predict = "seap.core.predict:main"
seap-proj = "seap.core.proj:main"
seap-mod-win = "seap.core.mod_win:main"

[project.urls]
Homepage = "https://github.com/yourusername/seap"
Documentation = "https://seap.readthedocs.io/"
Repository = "https://github.com/yourusername/seap"
Issues = "https://github.com/yourusername/seap/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=seap",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    # Suppress deprecation warnings for scipy.special.sph_harm (we use sph_harm_y with fallback)
    "ignore::DeprecationWarning:scipy.special",
    # Suppress RuntimeWarnings for division by zero in grids.py (handled explicitly)
    "ignore::RuntimeWarning:seap.prediction.grids",
    # Suppress invalid escape sequence warnings (fixed in code, but may still appear in installed packages)
    "ignore::DeprecationWarning:.*invalid escape sequence",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "scipy.*",
    "sklearn.*",
    "matplotlib.*",
    "ase.*",
    "pymatgen.*",
]
ignore_missing_imports = true 